--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <body>
     <main>
       <article class="box">
-        <h1>Roshan</h1>
+        <h1>Roshan Mhatre</h1>
         <div>
           <a href="mailto:your.email@example.com">officialroshanm@gmail.com</a>
         </div>
